@@ -788,8 +788,27 @@ If the `split.key` parameter is specified then only documents having the same ro
 == REQUESTSTATUS
 
 Request the status of an already submitted asynchronous CoreAdmin API call.
+--
+[example.tab-pane#v1coreadmin-requeststatus]
+====
+[.tab-label]*V1 API*
 
-`admin/cores?action=REQUESTSTATUS&requestid=_id_`
+[source,bash]
+----
+http://localhost:8983/solr/admin/cores?action=REQUESTSTATUS&requestid=id
+
+----
+====
+[example.tab-pane#v2coreadmin-requeststatus]
+====
+[.tab-label]*V2 API*
+
+[source,bash]
+----
+curl -X GET http://localhost:8983/api/node/commands/id
+----
+====
+--
 
 === Core REQUESTSTATUS Parameters
 
